@@ -50,7 +50,10 @@ function VarnishQueue(host, port, secret) {
         }, 1000);
     }
     client.on('close', reconnect);
-    client.on('error', reconnect);
+    client.on('error', function(err) {
+      console.log("Varnish connection error: " + err);
+      reconnect();
+    });
 
     function _send_pending(empty_callback) {
         if(!ready) return;
