@@ -2,6 +2,7 @@ Versions 0.2.1
 2014-MM-DD
 
  - Consistently emit Error instances on 'error' (#9)
+ - Do not hide varnish connection errors
 
 Versions 0.2.0
 2014-02-12
